--- a/experience.html
+++ b/experience.html
@@ -230,7 +230,7 @@ ul li a:hover {
         </label>
         <input type="checkbox" name="check" id="check">
         <ul>
-          <li><a href="main.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="education.html">Education</a></li>
           <li><a href="skills.html">Skills</a></li>
           <li><a href="experience.html">Experience</a></li>
