--- a/education.html
+++ b/education.html
@@ -274,13 +274,13 @@
 </head>
   <body>
     <nav><div class="nav_content">
-      <div class="logo"><a href="main.html"><img src="my assets/koba.jpg" alt="Koba Logo" width="200px"></a></div>
+      <div class="logo"><a href="index.html"><img src="my assets/koba.jpg" alt="Koba Logo" width="200px"></a></div>
         <label for="check" class="checkbox">
           <i class="ri-menu-line"></i>
         </label>
         <input type="checkbox" name="check" id="check">
         <ul>
-          <li><a href="main.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="education.html">Education</a></li>
           <li><a href="skills.html">Skills</a></li>
           <li><a href="experience.html">Experience</a></li>
