--- a/experience.html
+++ b/experience.html
@@ -224,7 +224,7 @@ ul li a:hover {
   <body>
     <nav>
       <div class="nav_content">
-      <div class="logo"><a href="main.html"><img src="my assets/koba.jpg" alt="Koba Logo" width="200px"></a></div>
+      <div class="logo"><a href="indexhtml"><img src="my assets/koba.jpg" alt="Koba Logo" width="200px"></a></div>
         <label for="check" class="checkbox">
           <i class="ri-menu-line"></i>
         </label>
