--- a/contact.html
+++ b/contact.html
@@ -229,7 +229,7 @@
   <nav>
     <div class="nav_content">
       <div class="logo">
-        <a href="main.html">
+        <a href="index.html">
           <img src="my assets/koba.jpg" alt="Koba Logo" width="200px">
         </a>
       </div>
@@ -238,7 +238,7 @@
       </label>
       <input type="checkbox" name="check" id="check">
       <ul>
-        <li><a href="main.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="education.html">Education</a></li>
         <li><a href="skills.html">Skills</a></li>
         <li><a href="experience.html">Experience</a></li>
