--- a/skills.html
+++ b/skills.html
@@ -167,6 +167,31 @@
       margin-bottom: 1.5rem;
     }
 
+        @media screen and (max-width: 600px) {
+
+.nav_content {
+  padding: 1rem 0.5rem;
+}
+
+nav .logo a {
+  font-size: 2rem;
+}
+
+nav .checkbox i {
+  font-size: 2rem;
+}
+
+ul {
+  top: 65px;
+  height: calc(100vh - 65px);
+}
+
+ul li a {
+  font-size: 1.25rem;
+  padding: 0.3rem 0.5rem;
+}
+}
+
         @media (max-width: 750px) {
       nav .checkbox {
         display: block;
