--- a/skills.html
+++ b/skills.html
@@ -190,6 +190,13 @@ ul li a {
   font-size: 1.25rem;
   padding: 0.3rem 0.5rem;
 }
+   .skill-box {
+      background-color: #fff;
+      border-radius:  10px;
+      padding-bottom: 2rem;
+      padding: 1.5rem;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
 }
 
         @media (max-width: 750px) {
@@ -254,7 +261,7 @@ ul li a {
           </div>
           <h3>HTML 5</h3>
         </div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe excepturi magnam aliquid tempora obcaecati, aspernatur possimus ducimus molestias, officia dolore sed, commodi fugiat officiis quo facere nostrum numquam. Modi, assumenda.</p>
+        <p>I have 6 months of experience in HTML and CSS, where I have gained knowledge in structuring and styling web pages, creating responsive layouts, and implementing design features to enhance user experience.</p>
       </div>
 
       <div class="skill-box">
@@ -264,7 +271,7 @@ ul li a {
           </div>
           <h3>CSS  3</h3>
         </div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe excepturi magnam aliquid tempora obcaecati, aspernatur possimus ducimus molestias, officia dolore sed, commodi fugiat officiis quo facere nostrum numquam. Modi, assumenda.</p>
+        <p>I have 6 months of experience in HTML and CSS, where I have gained knowledge in structuring and styling web pages, creating responsive layouts, and implementing design features to enhance user experience.</p>
       </div>
 
       <div class="skill-box">
@@ -274,7 +281,7 @@ ul li a {
           </div>
           <h3>MySQL</h3>
         </div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe excepturi magnam aliquid tempora obcaecati, aspernatur possimus ducimus molestias, officia dolore sed, commodi fugiat officiis quo facere nostrum numquam. Modi, assumenda.</p>
+        <p> I have also worked with MySQL for 6 months, learning how to design databases, write queries for data manipulation, and manage relational databases to support web applications.</p>
       </div>
 
       <div class="skill-box">
@@ -284,7 +291,7 @@ ul li a {
           </div>
           <h3>Java</h3>
         </div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe excepturi magnam aliquid tempora obcaecati, aspernatur possimus ducimus molestias, officia dolore sed, commodi fugiat officiis quo facere nostrum numquam. Modi, assumenda.</p>
+        <p> I am just beginning to learn Java and am excited to dive deeper into the language, with the goal of mastering new concepts and improving my overall programming capabilities.</p>
       </div>
     </div>
   </div>
@@ -300,7 +307,7 @@ ul li a {
             </div>
             <h3>Visual Studio Code</h3>
           </div>
-          <p>Powerful code editor for various programming languages.</p>
+          <p>Visual Studio Code is my coding buddy when it comes to creating a webpage,it is a powerful code editor for various programming languages.</p>
         </div>
 
         <div class="skill-box">
@@ -310,7 +317,7 @@ ul li a {
             </div>
             <h3>JGrasp</h3>
           </div>
-          <p>Lightweight IDE for Java development with visual debugging tools.</p>
+          <p>JGrasp is new to me it was introduced to me by my professor in Computer Programming. And it is lightweight IDE for Java development with visual debugging tools.</p>
         </div>
 
         <div class="skill-box">
@@ -320,7 +327,7 @@ ul li a {
             </div>
             <h3>Adobe Photoshop</h3>
           </div>
-          <p>Industry-leading image editing software for creative design.</p>
+          <p>I only know basic Photoshop Editing. And it is known as Industry-leading image editing software for creative design.</p>
         </div>
 
         <div class="skill-box">
