--- a/skills.html
+++ b/skills.html
@@ -159,7 +159,7 @@
       margin-bottom: 1.5rem;
     }
 
-        @media screen and (max-width: 600px) {
+@media screen and (max-width: 600px) {
 
 .nav_content {
   padding: 1rem 0.5rem;
@@ -190,6 +190,17 @@ ul li a {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   grid: 2;
 }
+.header {
+  text-align: center;    
+  margin-bottom: 4rem;
+  margin-top: 4rem;
+    }
+
+    .header h1 {
+      color: var(--text-dark);
+      font-size: 2.25rem;
+      margin-bottom: 2rem;
+    }
 }
 
         @media (max-width: 750px) {
