--- a/skills.html
+++ b/skills.html
@@ -127,6 +127,14 @@
       gap: 2rem;
     }
 
+    .skill-box {
+  background-color: #fff;
+  border-radius:  10px;
+  padding-bottom: 2rem;
+  padding: 3rem;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
     .skill-title {
       display: flex;
       align-items: center;
@@ -186,9 +194,8 @@ ul li a {
   background-color: #fff;
   border-radius:  10px;
   padding-bottom: 2rem;
-  padding: 3rem;
+  padding: 1.5rem;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  grid: 2;
 }
 .header {
   text-align: center;    
