--- a/skills.html
+++ b/skills.html
@@ -198,6 +198,7 @@ ul li a {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 .header {
+  padding: 1.5rem;
   text-align: center;    
   margin-bottom: 4rem;
   margin-top: 4rem;
@@ -205,7 +206,7 @@ ul li a {
 
     .header h1 {
       color: var(--text-dark);
-      font-size: 2.25rem;
+      font-size: 2.5rem;
       margin-bottom: 2rem;
     }
 }
