--- a/index.html
+++ b/index.html
@@ -228,6 +228,31 @@
   }
 }
 
+    @media (max-width: 750px) {
+      nav .checkbox {
+        display: block;
+      }
+
+      ul {
+        position: absolute;
+        width: 100%;
+        height: calc(100vh - 85px );
+        left: -100%;
+        top: 85px;
+        background-color: var(--extra-light);
+        flex-direction: column;
+        justify-content: center;
+        gap: 3rem;
+      }
+
+      nav #check:checked ~ul {
+        left: 0;
+      }
+
+      ul li a {
+        font-size:  1.25rem;
+      }
+
       .section_container {
         padding: 10rem 1rem 5rem 1rem;
         text-align: center;
@@ -242,6 +267,7 @@
         margin: auto;
       }
     }
+
   </style>
 </head>
   <body>
