--- a/index.html
+++ b/index.html
@@ -180,53 +180,30 @@
       border-radius: 95px ;
     }
 
-@media screen and (max-width: 600px) {
-  .nav_content {
-    padding: 1rem 0.5rem;
-    flex-direction: row; /* Ensure items are in a row */
-    justify-content: space-between; /* Keep space between logo and menu */
-  }
+          @media screen and (max-width: 600px) {
 
-  nav .logo a {
-    font-size: 1.5rem; /* Slightly smaller logo */
-  }
+      .nav_content {
+        padding: 1rem 0.5rem;
+      }
 
-  nav .checkbox i {
-    font-size: 1.5rem; /* Smaller menu icon */
-  }
+      nav .logo a {
+        font-size: 2rem;
+      }
 
-  ul {
-    flex-direction: row; /* Keep menu items inline */
-    justify-content: flex-end; /* Align menu items to the right */
-    width: auto; /* Auto width for the menu */
-  }
+      nav .checkbox i {
+        font-size: 2rem;
+      }
 
-  ul li a {
-    font-size: 1rem; /* Smaller font size for links */
-    padding: 0.5rem 1rem; /* More padding for better touch targets */
-  }
+      ul {
+        top: 65px;
+        height: calc(100vh - 65px);
+      }
 
-  .header h1 {
-    font-size: 1.8rem; /* Smaller header size */
-  }
-
-  .container {
-    padding: 0 1rem; /* Reduce padding */
-    grid-template-columns: 1fr; /* Single column layout */
-  }
-
-  .skill-box {
-    padding: 1rem; /* Adjust padding for skill boxes */
-  }
-
-  .skill-title h3 {
-    font-size: 1.2rem; /* Smaller skill title size */
-  }
-
-  .skill-box p {
-    font-size: 0.9rem; /* Smaller paragraph text */
-  }
-}
+      ul li a {
+        font-size: 1.25rem;
+        padding: 0.3rem 0.5rem;
+      }
+    }
 
     @media (max-width: 750px) {
       nav .checkbox {
@@ -267,14 +244,13 @@
         margin: auto;
       }
     }
-
   </style>
 </head>
   <body>
     <nav>
       <div class="nav_content">
         <div class="logo">
-          <a href="index.html">
+          <a href="main.html">
             <img src="my assets/koba.jpg" alt="Koba Logo" width="200px">
           </a>
         </div>
@@ -283,7 +259,7 @@
         </label>
         <input type="checkbox" name="check" id="check">
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="main.html">Home</a></li>
           <li><a href="education.html">Education</a></li>
           <li><a href="skills.html">Skills</a></li>
           <li><a href="experience.html">Experience</a></li>
