--- a/education.html
+++ b/education.html
@@ -78,6 +78,10 @@
       cursor: pointer;
     }
 
+    nav #check:checked ~ ul {
+      left: 0; /* Show menu when checked */
+    }
+
     ul {
       display: flex;
       align-items: center;
