--- a/education.html
+++ b/education.html
@@ -258,6 +258,7 @@
     width: 100%; /* Full width for timeline items */
     padding: 10px; /* Adjust padding */
     left: 0; /* Align items to the left */
+    position: relative; 
   }
 
   .timeline-item:nth-child(odd) {
