--- a/education.html
+++ b/education.html
@@ -269,9 +269,19 @@
     left: 0; /* Ensure even items are also aligned left */
   }
 
-  .timeline::after {
-    left: 10%; /* Adjust the line position if necessary */
+  .timeline-item::after {
+    content: '';
+    position: absolute;
+    width: 25px; /* Circle size */
+    height: 25px; /* Circle size */
+    left: -12px; /* Position circle to the left of the item */
+    background-color: #fff; /* Circle background color */
+    border: 4px solid var(--secondary-color); /* Circle border color */
+    top: 15px; /* Adjust vertical position */
+    border-radius: 50%; /* Make it circular */
+    z-index: 1; /* Ensure it appears above other content */
   }
+
 
   h1.current, h1.past {
     font-size: 1.2em; /* Smaller font size for headings */
