--- a/education.html
+++ b/education.html
@@ -79,11 +79,13 @@
     }
 
     ul {
+      width: 100wh;
+      height: 100vh;
       display: flex;
       align-items: center;
-      gap: 1rem;
+      gap: 2rem;
       list-style: none;
-      transition: left 0.4s;
+      transition: left 0.3s ease;
     }
 
     ul li a {
@@ -215,8 +217,7 @@
         left: -100%;
         background-color: var(--extra-light);
         flex-direction: column;
-        justify-content: center;
-        gap: 3;
+        gap: 3rem;
         transition: left 0.3s ease;
       }
 
