--- a/education.html
+++ b/education.html
@@ -21,7 +21,6 @@
 
     * {
       padding: 0;
-      margin: 0;
       box-sizing: border-box;
     }
 
@@ -202,6 +201,10 @@
         padding: 1rem 0.25rem;
       }
 
+      nav #check:checked ~ ul {
+        left: 0; /* Show menu when checkbox is checked */
+      }
+      
       nav .logo a {
         font-size: 1.5rem;
       }
@@ -211,12 +214,14 @@
       }
 
       ul {
-        top: 65px;
+        position: fixed;
+        top: 0;
         width: 100wh;
         height: 100vh;
         left: -100%;
         background-color: var(--extra-light);
         flex-direction: column;
+        justify-content: center;
         gap: 3rem;
         transition: left 0.3s ease;
       }
@@ -233,13 +238,10 @@
     position: relative; /* Ensure relative positioning */
   }
 
-  .timeline-item:nth-child(odd) {
-    left: 0; /* Ensure odd items are aligned left */
-  }
-
-  .timeline-item:nth-child(even) {
-    left: 0; /* Ensure even items are also aligned left */
-  }
+    .timeline-item:nth-child(odd),
+    .timeline-item:nth-child(even) {
+      left: 0; /* Ensure all items are aligned left */
+    }
 
   .timeline-item::after {
     content: '';
