--- a/education.html
+++ b/education.html
@@ -22,6 +22,8 @@
     * {
       padding: 0;
       margin: 0;
+      list-style: none;
+      text-decoration: none;
       box-sizing: border-box;
     }
 
@@ -76,6 +78,19 @@
       font-size: 2rem; 
       color: var(--secondary-color);
       cursor: pointer;
+    }
+
+    .checkbox{
+       font-size: 30px;
+      float: right;
+      line-height: 80px;
+      margin-right: 40px;
+      cursor: pointer;
+      display: none;
+    }
+
+    #check {
+      display: none;
     }
 
     ul {
@@ -238,31 +253,41 @@
     }
 
     @media (max-width: 850px) {
-      nav .checkbox {
+      .checkbox {
         display: block;
       }
 
       ul {
         position: fixed;
         width: 100%;
-        height: calc(100vh - 85px);
-        left: -100%;
-        top: 85px;
+        height: 100vh;
+        left: 0;
+        top: 80px;
         background-color: var(--extra-light);
         flex-direction: column;
-        justify-content: center;
-        gap: 3rem;
-        transition: left 0.3s ease;
+        text-align: center;
       }
 
-      nav #check:checked ~ ul {
+      #check:checked ~ ul {
         left: 0;
       }
 
-      ul li a {
+      nav ul li {
+        display: block;
+        margin: 50px 0;
+        line-height: 40px;
+      }
+      
+      nav ul li a {
         font-size: 1.5rem;
       }
     }
+
+     @media (max-width: 952px) {
+       nav ul li a{
+         font-size: 2rem; 
+       }
+     }
 
     .educational-title {
       margin-top: 3rem;
