--- a/education.html
+++ b/education.html
@@ -252,36 +252,38 @@
       }
     }
 
-    @media (max-width: 850px) {
-      .checkbox {
-        display: block;
-      }
+/* Responsive design for smaller screens */
+@media screen and (max-width: 850px) {
+  .checkbox {
+    display: block; /* Make the checkbox visible */
+  }
 
-      ul {
-        position: fixed;
-        width: 100%;
-        height: 100vh;
-        left: 0;
-        top: 80px;
-        background-color: var(--extra-light);
-        flex-direction: column;
-        text-align: center;
-      }
+  ul {
+    position: fixed;
+    width: 100%; /* Set width to 100% */
+    height: 100vh;
+    left: 0;
+    top: 80px; /* Adjust this value as necessary */
+    background-color: var(--extra-light);
+    flex-direction: column;
+    text-align: center;
+    display: none; /* Initially hide the menu */
+  }
 
-      #check:checked ~ ul {
-        left: 0;
-      }
+  #check:checked ~ ul {
+    display: flex; /* Show the menu when checked */
+  }
 
-      nav ul li {
-        display: block;
-        margin: 50px 0;
-        line-height: 40px;
-      }
-      
-      nav ul li a {
-        font-size: 1.5rem;
-      }
-    }
+  nav ul li {
+    display: block;
+    margin: 50px 0;
+    line-height: 40px;
+  }
+
+  nav ul li a {
+    font-size: 1.5rem;
+  }
+}
 
     @media (max-width: 952px) {
       nav ul li a {
