--- a/education.html
+++ b/education.html
@@ -36,7 +36,7 @@
     }
 
     nav {
-      height: 85px;
+      height: 95px;
       width: 100%;
       position: fixed;
       top: 0;
@@ -197,7 +197,7 @@
     /* Responsive design for smaller screens */
     @media screen and (max-width: 600px) {
       .nav_content {
-        padding: 1rem 0.5rem;
+        padding: 0.5rem 0.5rem;
       }
 
       nav .logo a {
@@ -277,7 +277,7 @@
     <nav>
       <div class="nav_content">
         <div class="logo">
-          <a href="main.html">
+          <a href="index.html">
             <img src="my assets/koba.jpg" alt="Koba Logo" width="200px">
           </a>
         </div>
@@ -286,7 +286,7 @@
         </label>
         <input type="checkbox" name="check" id="check">
         <ul>
-          <li><a href="main.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="education.html">Education</a></li>
           <li><a href="skills.html">Skills</a></li>
           <li><a href="experience.html">Experience</a></li>
