--- a/education.html
+++ b/education.html
@@ -36,8 +36,7 @@
     }
 
     nav {
-      height: 95px;
-      width: 100%;
+      height: 100%;
       position: fixed;
       top: 0;
       left: 0;
