--- a/education.html
+++ b/education.html
@@ -237,6 +237,10 @@
     }
 
     @media (max-width: 850px) {
+
+      nav_content {
+        width: 100%;
+      }
       nav .checkbox {
         display: block;
       }
