--- a/education.html
+++ b/education.html
@@ -238,7 +238,7 @@
 
     @media (max-width: 850px) {
 
-      nav_content {
+      .nav_content {
         width: 100%;
       }
       nav .checkbox {
