--- a/education.html
+++ b/education.html
@@ -197,7 +197,8 @@
     /* Responsive design for smaller screens */
     @media screen and (max-width: 600px) {
       .nav_content {
-        padding: 1rem 0.5rem;
+        height: 40px;
+        padding: 0.25rem 0.5rem;
       }
 
       nav .logo a {
@@ -238,6 +239,9 @@
     }
 
     @media (max-width: 850px) {
+      .nav_content {
+        width: 100%;
+      }
       nav .checkbox {
         display: block;
       }
