--- a/education.html
+++ b/education.html
@@ -197,6 +197,7 @@
     /* Responsive design for smaller screens */
     @media screen and (max-width: 600px) {
       .nav_content {
+        width: 752px;
         height: 40px;
         padding: 0.25rem 0.5rem;
       }
