--- a/education.html
+++ b/education.html
@@ -197,6 +197,7 @@
     /* Responsive design for smaller screens */
     @media screen and (max-width: 600px) {
       .nav_content {
+        width: 800px;
         padding: 1rem 0.5rem;
       }
 
@@ -234,7 +235,9 @@
         height: 15px;
         top: 10px;
       }
-      
+      .timeline-item:nth-child(odd) {
+        left: 0%;
+      }
       .timeline-item:nth-child(even) {
         left: 0%;
       }
