--- a/education.html
+++ b/education.html
@@ -36,12 +36,11 @@
     }
 
     nav {
-      height: 90px;
       width: 100%;
       position: fixed;
       top: 0;
       left: 0;
-      background-color: #fff;
+      background-color: #fbfdf6;
       z-index: 99;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     }
