--- a/index.html
+++ b/index.html
@@ -275,8 +275,7 @@
             I'm <span>Koba <br>An aspiring Application Developer</span>
           </h1>
           <p class="description">
-           Welcome to my website! I’m Marq Francis Capilos though my Discord friends know me as "Koba." As an aspiring Application Development student, I’m passionate about coding, problem-solving, and personal growth. 
-           Currently pursuing my diploma, I thrive on challenges that push me to learn new skills while building discipline and responsibility. Technology fascinates me, and I’m excited to explore its endless possibilities through creativity and collaboration.
+           Welcome to my website! I’m Marq Francis Capilos though my Discord friends know me as "Koba." As an aspiring Application Development student, I’m passionate about coding, problem-solving, and personal growth.<br>Currently pursuing my diploma, I thrive on challenges that push me to learn new skills while building discipline and responsibility. Technology fascinates me, and I’m excited to explore its endless possibilities through creativity and collaboration.
           </p>
           <div class="action_btns">
             <a href="contact.html" class="contact_me">Contact Me!</a>
