--- a/contact.html
+++ b/contact.html
@@ -249,7 +249,7 @@
   <section class="section">
     <div class="form">
       <h1>Contact</h1>
-      <form action="https://formsubmit.co/ea089cdfd9c147f40c62c2f84cc8b1b5" method="POST">
+      <form action="https://formsubmit.co/marqfranciscapilos@gmail.com" method="POST">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name">
 
